Import bug fixed

--- a/ui/Import.ui
+++ b/ui/Import.ui
@@ -23,7 +23,7 @@
     </rect>
    </property>
    <property name="currentIndex">
-    <number>0</number>
+    <number>1</number>
    </property>
    <widget class="QWidget" name="page">
     <widget class="QSplitter" name="splitter">
@@ -199,6 +199,29 @@
      <property name="title">
       <string>Info</string>
      </property>
+     <widget class="QComboBox" name="comboBox">
+      <property name="geometry">
+       <rect>
+        <x>280</x>
+        <y>50</y>
+        <width>211</width>
+        <height>22</height>
+       </rect>
+      </property>
+     </widget>
+     <widget class="QLabel" name="label_3">
+      <property name="geometry">
+       <rect>
+        <x>30</x>
+        <y>50</y>
+        <width>211</width>
+        <height>16</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Choose a table you want to import</string>
+      </property>
+     </widget>
     </widget>
     <widget class="QPushButton" name="pushButton_3">
      <property name="geometry">
