--- a/ui/ParameterSetting.ui
+++ b/ui/ParameterSetting.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Ratio set</string>
+   <string>Parameter setting</string>
   </property>
   <widget class="QPushButton" name="pushButton">
    <property name="geometry">
@@ -39,7 +39,7 @@
     <string>Set a PrbABS6 ratio</string>
    </property>
   </widget>
-  <widget class="QWidget" name="">
+  <widget class="QWidget" name="layoutWidget">
    <property name="geometry">
     <rect>
      <x>20</x>
